--- a/src/index.css
+++ b/src/index.css
@@ -223,7 +223,7 @@ nav ul {
 
 @media screen and (max-width: 991px) {
   .gradient-cards {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
